@@ -8,28 +8,28 @@ Prado::using('System.Xml.TXmlDocument');
  */
 class TXmlDocumentTest extends PHPUnit_Framework_TestCase {
 
-  public function testConstruct() {
-    throw new PHPUnit_Framework_IncompleteTestError();
-  }
+	public function testConstruct() {
+		throw new PHPUnit_Framework_IncompleteTestError();
+	}
 
-  public function testSetVersion() {
-    throw new PHPUnit_Framework_IncompleteTestError();
-  }
+	public function testSetVersion() {
+		throw new PHPUnit_Framework_IncompleteTestError();
+	}
 
-  public function testSetEncoding() {
-    throw new PHPUnit_Framework_IncompleteTestError();
-  }
+	public function testSetEncoding() {
+		throw new PHPUnit_Framework_IncompleteTestError();
+	}
 
-  public function testLoadFromFile() {
-    throw new PHPUnit_Framework_IncompleteTestError();
-  }
+	public function testLoadFromFile() {
+		throw new PHPUnit_Framework_IncompleteTestError();
+	}
 
-  public function testLoadFromString() {
-    throw new PHPUnit_Framework_IncompleteTestError();
-  }
+	public function testLoadFromString() {
+		throw new PHPUnit_Framework_IncompleteTestError();
+	}
 
-  public function testSaveToString() {
-    throw new PHPUnit_Framework_IncompleteTestError();
-  }
+	public function testSaveToString() {
+		throw new PHPUnit_Framework_IncompleteTestError();
+	}
 }
 ?>
